--- a/Android Client/Clup/app/src/main/res/values-v27/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-v27/themes.xml
@@ -41,4 +41,9 @@
 
         <item name="android:windowBackground">@drawable/splash_screen_background</item>
     </style>
+
+    <!-- PAD TEXT VIEW THEME -->
+    <style name="AppTheme.Clup.PadTextView" parent="Widget.MaterialComponents.TextView">
+        <item name="android:background">@color/white</item>
+    </style>
 </resources>
