--- a/Android Client/Clup/app/src/main/res/values/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values/themes.xml
@@ -104,6 +104,11 @@
         <item name="android:textSize">@dimen/title_text_view_text_size</item>
     </style>
 
+    <!-- PAD TEXT VIEW THEME -->
+    <style name="AppTheme.Clup.PadTextView" parent="Widget.MaterialComponents.TextView">
+        <item name="android:background">@color/gray_legacy</item>
+    </style>
+
     <!-- SUBTITLE TEXT VIEW THEME -->
     <style name="AppTheme.Clup.SubtitleTextView" parent="Widget.MaterialComponents.TextView">
         <item name="android:fontFamily">@font/helvetica_neue_light</item>
