--- a/Android Client/Clup/app/src/main/res/layout/item_market.xml
+++ b/Android Client/Clup/app/src/main/res/layout/item_market.xml
@@ -2,40 +2,41 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/daily_meal_card_view"
+    style="@style/AppTheme.Clup.CardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="4dp"
     android:clickable="true"
-    android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground">
+    android:focusable="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="8dp">
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/name_text_view"
+            style="@style/AppTheme.Clup.ItemTitleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
-            android:textSize="24sp"
-            android:textStyle="bold"
+            android:paddingStart="12dp"
+            android:paddingTop="4dp"
+            android:paddingEnd="12dp"
+            android:paddingBottom="4dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/address_text_view"
+            style="@style/AppTheme.Clup.ItemSubtitleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:drawablePadding="16dp"
             android:gravity="center_vertical"
-            android:textColor="@color/black"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:paddingBottom="4dp"
             app:drawableLeftCompat="@drawable/ic_marker"
             app:layout_constraintStart_toStartOf="@id/name_text_view"
             app:layout_constraintTop_toBottomOf="@id/name_text_view" />
