--- a/Android Client/Clup/app/src/main/res/values-night-v23/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-night-v23/themes.xml
@@ -21,6 +21,8 @@
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
 
+        <item name="android:navigationBarColor">?android:colorBackground</item>
+
         <item name="windowActionModeOverlay">true</item>
     </style>
 
