--- a/Android Client/Clup/app/src/main/res/values-night-v27/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-night-v27/themes.xml
@@ -22,6 +22,7 @@
         <item name="android:windowLightStatusBar">false</item>
 
         <item name="android:windowLightNavigationBar">false</item>
+        <item name="android:navigationBarColor">?android:colorBackground</item>
 
         <item name="windowActionModeOverlay">true</item>
     </style>
