--- a/Android Client/Clup/app/src/main/res/values-v23/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-v23/themes.xml
@@ -21,6 +21,8 @@
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
 
+        <item name="android:navigationBarColor">@color/gray_legacy</item>
+
         <item name="windowActionModeOverlay">true</item>
     </style>
 
