--- a/Android Client/Clup/app/src/main/res/values/dimen.xml
+++ b/Android Client/Clup/app/src/main/res/values/dimen.xml
@@ -11,7 +11,16 @@
     <dimen name="title_text_view_text_size">30sp</dimen>
     <dimen name="subtitle_text_view_text_size">20sp</dimen>
 
+    <dimen name="item_title_text_view_text_size">24sp</dimen>
+    <dimen name="item_subtitle_text_view_text_size">14sp</dimen>
+
     <dimen name="mini_fab_margin_start">20dp</dimen>
     <dimen name="fab_margin_end">10dp</dimen>
     <dimen name="fab_margin_bottom">10dp</dimen>
+
+    <dimen name="card_view_margin">12dp</dimen>
+    <dimen name="card_corner_radius">15dp</dimen>
+    <dimen name="card_elevation">1dp</dimen>
+
+    <dimen name="peek_height">130dp</dimen>
 </resources>
