Added SelectActivity, fixed layout/theme issues, minor ui improvements.

--- a/Android Client/Clup/app/src/main/res/layout/activity_main.xml
+++ b/Android Client/Clup/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,17 @@
     tools:context=".ui.MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/main_app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:elevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
-            style="@style/AppTheme.Clup.MaterialToolbar"
+            android:id="@+id/main_toolbar"
+            style="@style/AppTheme.Clup.MainMaterialToolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:menu="@menu/menu_main"
@@ -23,13 +25,14 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <com.google.android.material.button.MaterialButton
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/book_button"
-        style="@style/AppTheme.Clup.FilledRoundButton"
+        style="@style/AppTheme.Clup.ExtendedFloatingActionButton"
         android:layout_width="@dimen/rounded_button_width"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="@dimen/extended_fab_margin"
         android:text="@string/action_book"
+        app:icon="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
