--- a/Android Client/Clup/app/src/main/res/values-night/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-night/themes.xml
@@ -8,7 +8,7 @@
         <item name="colorOnPrimary">@color/gray_900</item>
 
         <item name="colorSecondary">@color/gray_900</item>
-        <item name="colorSecondaryVariant">@color/unknown</item>
+        <item name="colorSecondaryVariant">@color/lime_500</item>
         <item name="colorOnSecondary">@color/white</item>
     </style>
 
@@ -28,9 +28,28 @@
     <style name="AppTheme.Clup.Map" parent="AppTheme.Clup">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:windowTranslucentStatus">false</item>
+
         <item name="android:statusBarColor">@android:color/transparent</item>
 
+        <item name="android:navigationBarColor">?android:colorBackground</item>
+
         <item name="windowActionModeOverlay">true</item>
+    </style>
+
+    <!-- SELECT ACTIVITY THEMES -->
+    <style name="AppTheme.Clup.Select" parent="AppTheme.Clup">
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:windowTranslucentStatus">false</item>
+
+        <item name="android:statusBarColor">?android:colorBackground</item>
+
+        <item name="android:navigationBarColor">?android:colorBackground</item>
+
+        <item name="windowActionModeOverlay">true</item>
+    </style>
+
+    <style name="AppTheme.Clup.Select.Background" parent="">
+        <item name="android:background">?android:colorBackground</item>
     </style>
 
     <!-- SPLASH SCREEN THEME -->
@@ -43,6 +62,19 @@
         <item name="android:navigationBarColor">?android:colorBackground</item>
 
         <item name="android:windowBackground">@drawable/splash_screen_background</item>
+
+        <item name="windowActionModeOverlay">true</item>
+    </style>
+
+    <!-- TOOLBAR THEME -->
+    <style name="AppTheme.Clup.SelectMaterialToolbar" parent="Widget.MaterialComponents.Toolbar">
+        <item name="android:background">?android:colorBackground</item>
+        <item name="titleTextColor">@color/white</item>
+    </style>
+
+    <style name="AppTheme.Clup.MainMaterialToolbar" parent="Widget.MaterialComponents.Toolbar">
+        <item name="android:background">?android:colorBackground</item>
+        <item name="titleTextColor">@color/white</item>
     </style>
 
     <!-- BUTTON FINAL THEME -->
@@ -77,7 +109,10 @@
         <item name="android:textSize">@dimen/title_text_view_text_size</item>
     </style>
 
-    <style name="AppTheme.Clup.ItemTitleTextView" parent="AppTheme.Clup.TitleTextView">
+    <style name="AppTheme.Clup.ItemTitleTextView" parent="">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAlignment">textStart</item>
+
         <item name="android:textSize">@dimen/item_title_text_view_text_size</item>
     </style>
 
@@ -95,7 +130,14 @@
         <item name="android:textAlignment">textStart</item>
     </style>
 
-    <!-- CARD VIEW ITEM THEME -->
+    <style name="AppTheme.Clup.MediumItemSubtitleTextView" parent="">
+        <item name="android:textSize">@dimen/medium_item_subtitle_text_view_text_size</item>
+        <item name="android:fontFamily">@font/helvetica_neue_medium</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:textColor">@color/white_alpha_80</item>
+    </style>
+
+    <!-- CARD VIEW ITEM THEMES -->
     <style name="AppTheme.Clup.CardView" parent="Widget.MaterialComponents.CardView">
         <item name="cardCornerRadius">@dimen/card_corner_radius</item>
         <item name="cardElevation">@dimen/card_elevation</item>
@@ -103,6 +145,12 @@
         <item name="android:layout_margin">@dimen/card_view_margin</item>
 
         <item name="android:foreground">?android:attr/selectableItemBackground</item>
+    </style>
+
+    <style name="AppTheme.Clup.TopRoundedCardView">
+        <item name="cardElevation">0dp</item>
+        <item name="cardCornerRadius">20dp</item>
+        <item name="android:backgroundTint">@color/white_alpha_90</item>
     </style>
 
     <!-- RECYCLER VIEW CONTAINER THEME -->
@@ -113,5 +161,31 @@
         <item name="behavior_peekHeight">@dimen/peek_height</item>
         <item name="layout_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior
         </item>
+    </style>
+
+    <!-- EXTENDED FLOATING ACTION BUTTON THEME -->
+    <style name="AppTheme.Clup.ExtendedFloatingActionButton" parent="Widget.MaterialComponents.ExtendedFloatingActionButton">
+        <item name="android:paddingTop">@dimen/rounded_button_vertical_padding</item>
+        <item name="android:paddingBottom">@dimen/rounded_button_vertical_padding</item>
+
+        <item name="fontFamily">@font/helvetica_neue_heavy</item>
+
+        <item name="rippleColor">@color/gray_800</item>
+        <item name="backgroundTint">@color/lime_500</item>
+        <item name="iconTint">@color/gray_900</item>
+        <item name="android:textColor">@color/gray_900</item>
+    </style>
+
+    <!-- CHIP THEMES -->
+    <style name="AppTheme.Clup.Chip" parent="Widget.MaterialComponents.Chip.Choice">
+        <item name="android:textColor">@color/chip_text_color</item>
+        <item name="chipBackgroundColor">@color/chip_background_color</item>
+    </style>
+
+    <style name="AppTheme.Clup.Chip.Text" parent="TextAppearance.MaterialComponents.Chip">
+        <item name="android:ellipsize">end</item>
+
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 </resources>
