--- a/Android Client/Clup/app/src/main/res/layout/item_shop.xml
+++ b/Android Client/Clup/app/src/main/res/layout/item_shop.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/daily_meal_card_view"
+    android:id="@+id/shop_card_view"
     style="@style/AppTheme.Clup.CardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -33,6 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:drawablePadding="16dp"
+            android:maxLines="2"
             android:gravity="center_vertical"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
