--- a/Android Client/Clup/app/src/main/res/values-night-v27/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-night-v27/themes.xml
@@ -27,6 +27,20 @@
         <item name="windowActionModeOverlay">true</item>
     </style>
 
+    <!-- SELECT ACTIVITY THEME -->
+    <style name="AppTheme.Clup.Select" parent="AppTheme.Clup">
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:windowTranslucentStatus">false</item>
+
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:statusBarColor">?android:colorBackground</item>
+
+        <item name="android:windowLightNavigationBar">false</item>
+        <item name="android:navigationBarColor">?android:colorBackground</item>
+
+        <item name="windowActionModeOverlay">true</item>
+    </style>
+
     <!-- SPLASH SCREEN THEME -->
     <style name="AppTheme.Clup.Splash" parent="AppTheme.Clup">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
@@ -38,5 +52,7 @@
         <item name="android:navigationBarColor">?android:colorBackground</item>
 
         <item name="android:windowBackground">@drawable/splash_screen_background</item>
+
+        <item name="windowActionModeOverlay">true</item>
     </style>
 </resources>
